Added swagger docs, removed useless files
